--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 /* navigation */
 nav {
-  background-color: #f2f2f2;
+  background-color: #524a3a;
   text-align: right;
   display: flex;
   justify-content: space-between;
@@ -30,7 +30,7 @@ nav ul li a {
   display: block;
   padding: 10px 20px;
   text-decoration: none;
-  color: #333;
+  color: #fffAE1;
 }
 
 nav ul li a:hover {
@@ -55,22 +55,108 @@ nav ul li a:hover {
 .hero {
 width: 100%;
 height: 500px;
-background-image: url(/img/hero.jpg);
+background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url(/img/hero.jpg);
 background-size: cover;
 background-position: center;
 }
 .hero h1 {
   font-size: min(47px, 6vw);
   text-align: center;
-  color: #f2f2f2;
+  color: #fffAE1;
   margin-bottom: 40px;
+  padding-top: 60px;
 }
 .hero p {
   font-size: min(33px, 4vw);
   text-align: center;
-  color: #f2f2f2;
+  color: #fffAE1;
   margin-top: 20px;
   width: auto;
+  padding-top: 40px;
+}
+/* dépannage conseil et formation */
+.section-title {
+  text-align: center;
+  margin-top: 4rem;
+  padding: 0 1rem;
+  color: #ee6c4d;
+  font-size: 1.5rem;
+  margin-bottom: 20px;
+}
+.formations {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 10px;
+}
+.gauche {
+  width: 50%;
+}
+.gauche img {
+  height: 80%;
+  width: 80%;
+}
+.descriptions {
+  width: 50%;
+}
+.descriptions h4 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-bottom: 10px;
+  color: #355070;
+}
+.descriptions p {
+  font-weight: 300;
+  letter-spacing: 1px;
+  margin-bottom: 30px;
+  padding-right: 20px;
+  color: #617d98;
+  
 }
 
+/* footer */
+footer {
+    background-color: #524a3a;
+    color: #fffAE1;
+    padding: 20px 0 10px 0;
+    text-align: center;
+}
+form {
+   margin: 0 auto; 
+   max-width: 900px;
+}
+input, textarea, button {
+    border: none;
+    width: 55%;
+    padding: 15px 10px;
+    margin: 1px 0;
+    font-size: 1.2em;
+    font-family: 'Advent pro', sans-serif;
+    border-radius: 8px;
+}
+textarea {
+    height: 120px;
+}
+button {
+    font-size: 1.5em;
+    background-color: #fffAE1;
+}
+button:hover {
+    background-color: #e07a5f;
+    color: #fffAE1;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+}
+#deuxiemeTrait {
+    height: 1px;
+    width: 75%;
+    background-color: #fffAE1;
+    margin: 60px auto; 
+}
 
+#copyright {
+    /* width: 50%; */
+    text-align: center;
+    color: #fffAE1; 
+}
