--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 /* navigation */
 nav {
-  background-color: #524a3a;
+  background-color: #2f4858;
   text-align: right;
   display: flex;
   justify-content: space-between;
@@ -55,7 +55,7 @@ nav ul li a:hover {
   width: 100%;
   height: 500px;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url(/img/hero-1.jpg);
+    url(/img/image-accueil.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -148,9 +148,92 @@ nav ul li a:hover {
   color: #617d98;
 }
 
+/* page tarifs */
+/* les formules */
+.section-title {
+  text-align: center;
+  margin-top: 4rem;
+  padding: 0 1rem;
+  color: #ee6c4d;
+  font-size: 2rem;
+}
+.services-title-formule {
+  text-align: center;
+  margin-top: 1rem;
+  padding: 0 1rem;
+  color: #343a40;
+  font-size: 1.5rem;
+}
+.services-title-formule h3 {
+  color: #355070;
+}
+.section-center{
+  display: flex;
+  justify-content: space-around;
+  gap: 1rem;
+}
+.service-card-tarifs {
+  margin: 2rem auto;
+  border-radius: 0.5rem;
+  background: #f1f5f8;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s linear;
+  width: 400px;
+}
+.service-card-one:hover {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  transform: scale(1.02);
+}
+.service-img-container {
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  object-fit: cover;
+  height: 160px;
+  width: 300px;
+}
+.service-img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.service-info {
+  text-align: center;
+  padding: 3rem 1rem 2.5rem 1rem;
+  color: #343a40;
+}
+.service-info h4 {
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.service-info p {
+  max-width: 20rem;
+  top: auto;
+  color: #617d98;
+  margin: 0 auto;
+  text-align: justify;
+}
+.service-info h3 {
+  bottom: 10px;
+}
+.price {
+  margin-bottom: 1rem;
+  color: #ee6c4d;
+}
+
+/* les tarifs horaires */
+.title {
+  margin-bottom: 1rem;
+  color: #ee6c4d;
+  font-size: 2rem;
+  text-align: center;
+}
+
+
+
 /* footer */
 .contact {
-  background-color: #524a3a;
+  background-color: #14213d;
   color: #fffae1;
   padding: 20px 0 10px 0;
   text-align: center;
