--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-/* navigation */
+/* ---------------------- navigation ------------------ */
 nav {
   background-color: #2f4858;
   text-align: right;
@@ -36,7 +36,7 @@ nav ul li a {
 nav ul li a:hover {
   background-color: #ddd;
 }
-/* logo */
+/* --------------------------- logo ------------------*/
 .logo {
   width: 50%;
   margin-top: 5px;
@@ -50,7 +50,7 @@ nav ul li a:hover {
   margin-left: 10px;
 }
 
-/* accueil */
+/* ---------------------- accueil ----------------------*/
 .hero {
   width: 100%;
   height: 500px;
@@ -75,7 +75,7 @@ nav ul li a:hover {
   padding-top: 40px;
 }
 
-/* page dépannage cards */
+/* ----------------- page dépannage cards -----------------------*/
 .section-center {
   display: flex;
   justify-content: space-around;
@@ -109,7 +109,7 @@ nav ul li a:hover {
   margin: 0 auto;
 }
 
-/* dépannage conseil et formation */
+/* ------------------ dépannage conseil et formation ---------------- */
 .section-title {
   text-align: center;
   margin-top: 4rem;
@@ -148,8 +148,8 @@ nav ul li a:hover {
   color: #617d98;
 }
 
-/* page tarifs */
-/* les formules */
+/* ----------------- page tarifs ---------------------*/
+/* ---------------les formules ----------------------*/
 .section-title {
   text-align: center;
   margin-top: 4rem;
@@ -221,7 +221,7 @@ nav ul li a:hover {
   color: #ee6c4d;
 }
 
-/* les tarifs horaires */
+/* ------------------- les tarifs horaires ------------------*/
 .title {
   margin-bottom: 1rem;
   color: #ee6c4d;
@@ -254,6 +254,7 @@ nav ul li a:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 2rem;
 }
 
 .prestations {
@@ -269,7 +270,8 @@ nav ul li a:hover {
   padding-left: 3rem;
   color: #ee6c4d;
 }
-/* footer */
+
+/*-------------------------- footer --------------------------- */
 .contact {
   background-color: #14213d;
   color: #fffae1;
